Fix bad readability in dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,7 +68,7 @@
 
     --vibrant-bg: #0008;
 
-    --gray: #555;
+    --gray: #777;
 
     --inverse: #222;
     --on-inverse: #fff;
